--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,68 @@
+body {
+  padding-bottom: 25rem;
+}
+
 header {
-  background: url(../images/glass-plants.jpg) center / cover;
+  background: url(../images/flower-art-new.png) center / cover;
   height: 60vh;
-  justify-content: center;
+  justify-content: left;
   text-align: center;
 }
 
 h1 {
-  color: hsla(0, 0%, 100%, 0.9);
+  color: hsla(0, 0%, 0%, 0.9);
+  text-align: left;
   font-weight: bold;
+  font-size: 5rem;
+  padding: 150px 0 0 80px;
 }
 
 .slogan {
-   color: hsla(0, 50%, 100%, 0.7);
+   color: hsla(0, 0%, 0%, 0.7);
+   text-align: left;
    font-weight: lighter;
-   font-size: 1.6rem;
+   font-size: 1.8rem;
+   margin: -20px 0 10px 80px;
+   line-height: 1.3;
+}
+
+main {
+  max-width: 900px;
+}
+
+.project-description {
+  padding-left: 0;
+}
+
+.mdl-card__title-text {
+  margin: auto;
+  font-size: 1.5rem
+}
+
+.mdl-card__supporting-text {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+}
+
+.project img {
+  width: 100%;
+}
+
+footer.mdl-mini-footer {
+  bottom: 0;
+  padding: 0.5rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+}
+
+footer.mdl-mini-footer > ul {
+  margin: auto;
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 1024px) {
+  header.mdl-layout__header {
+    display: flex;
+  }
 }
